[refactor] Pequenas refatorações e formatações do código