@@ -2,7 +2,6 @@ package ufrn.imd.cardeasy.dtos.project;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import ufrn.imd.cardeasy.dtos.budget.BudgetDTO;
 import ufrn.imd.cardeasy.models.Project;
@@ -31,6 +30,6 @@ public record ProjectDTO(
   ) {
     return projects.stream()
       .map(ProjectDTO::from)
-      .collect(Collectors.toList());
+      .toList();
   };
 };
